<resources>
    <string name="app_name">沉降观测</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--登陆模块-->
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="machine_code">机器码</string>
    <string name="register_code">注册码</string>
    <string name="registering">拼命注册中…</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>

    <string name="system_name">沉降观测管理系统</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login_company">By：上海同望信息技术有限公司</string>
    <string name="login_copyright">Copyright 2015-2017</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="logining">拼命登录中…</string>

    <string name="loading">加载中……</string>

    <!--版本更新模块-->
    <string name="company">上海同望信息技术有限公司</string>
    <string name="check_update">检测更新</string>
    <string name="update">更新</string>

    <!--设置模块-->
    <string name="communicate_test">通讯调试</string>
    <string name="level_line">水准线路</string>
    <string name="measurel_station">测站</string>
    <string name="bluetooth_setting">蓝牙设置</string>
    <string name="data_setting">数据设置</string>
    <string name="classic_bluetooth">传统蓝牙</string>
    <string name="le_bluetooth">低功耗蓝牙</string>

    <!--项目模块-->
    <string name="shuizhunxian">水准线</string>
    <string name="renyuan">人员</string>
    <string name="jidian">基点</string>

    <!--Dialog模块-->
    <string name="dialog_title">确定下载吗？</string>
    <string name="dialog_content">当前网络非Wifi网络，下载会消耗流量，请问是否继续下载？</string>
    <string name="dialog_positiveText">确定</string>
    <string name="dialog_negativeText">取消</string>
    <string name="dialog_neutralText">扫描</string>
    <string name="dialog_clear">清除</string>
    <string name="dialog_title_delete">确定删除吗？</string>
    <string name="dialog_stop_title">确定终止吗？</string>
    <string name="dialog_content_delete_shuizhunxian">删除当前水准线后不可恢复，请问是否继续删除？</string>
    <string name="dialog_content_delete">删除操作不可恢复，请问是否继续删除？</string>
    <string name="dialog_stop_content">终止操作不可恢复，请问是否继续终止？</string>
    <string name="dialog_select_jidian">请选择基点</string>
    <string name="dialog_select_bluetooth">请选择蓝牙设备</string>
    <string name="dialog_select_cedian">请选择测点</string>
    <string name="dialog_wait">请稍后</string>
    <string name="dialog_measureing">正在读取数据，请耐心等待…</string>
    <string name="dialog_scan">扫描</string>
    <string name="dialog_title_exit">确定要退出吗？</string>
    <string name="dialog_content_exit">当前正在测量，如果退出可能会造成数据丢失，请问是否退出？</string>
    <string name="dialog_title_remeasure">确定重新测量水准线吗？</string>
    <string name="dialog_content_remeasure">重新测量水准线会清除之前测量数据，请问是否重新测量？</string>
    <string name="dialog_title_zhuandian">增加转点</string>
    <string name="dialog_content_zhuandian">确定增加转点吗？</string>
    <string name="dialog_title_pingcha">确定平差处理吗？</string>
    <string name="dialog_content_pingcha">当前水准线已测量完毕，请问是否进行平差处理？</string>
    <string name="dialog_title_no_pingcha">不能平差</string>
    <string name="dialog_content_no_pingcha">当前水准线未测量完毕，请测量完毕后再进行平差处理。</string>
    <string name="dialog_title_relogin">确定重新登录吗？</string>
    <string name="dialog_content_relogin">重新登录请点击择确定，否则请点击取消。</string>


    <!--测量模块-->
    <string name="zhuandian">转点</string>
    <string name="measure">测量</string>
    <string name="delete">删除</string>
    <string name="cedian">测点</string>
    <string name="fance">返测</string>
    <string name="chongce">重测</string>

    <!--添加水准线模块-->
    <string name="base_data">基础数据</string>
    <string name="line_info">线路信息</string>

    <!--详情模块-->
    <string name="detail_data">详情数据</string>
    <string name="original_data">原始数据</string>
    <string name="result_data">成果数据</string>
</resources>
