<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/system_name"
            android:textColor="@color/base_color"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="280dp"
            android:layout_height="300dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:background="#2fa881" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/login"
                        android:textColor="#FFCC00"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_username_login_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:hint="@string/username"
                            android:inputType="textPersonName"
                            android:paddingBottom="2dp"
                            android:textColor="#2fa881"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="13sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_password_login_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#c5c5c5">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingBottom="2dp"
                            android:textColor="#2fa881"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="13sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center">

                    <com.shtoone.chenjiang.widget.processbutton.iml.ActionProcessButton
                        android:id="@+id/bt_login_fragment"
                        android:layout_width="240dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        custom:pb_colorComplete="@color/green_complete"
                        custom:pb_colorError="#f00"
                        custom:pb_colorNormal="@color/blue_normal"
                        custom:pb_colorPressed="@color/blue_pressed"
                        custom:pb_colorProgress="@color/purple_progress"
                        custom:pb_textComplete="@string/login_success"
                        custom:pb_textError="@string/login_error"
                        custom:pb_textProgress="@string/logining" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- 制作单位 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/login_company"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <!-- CopyRight信息 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_copyright"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_add_white_24dp"
        app:fabSize="normal"
        app:layout_anchor="@id/cv"
        app:layout_anchorGravity="right|end|top" />
</android.support.design.widget.CoordinatorLayout>