<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo_version_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textview0"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo_version_fragment"
            android:layout_marginLeft="40dp"
            android:text="项目名称："
            android:textColor="@color/green1" />

        <TextView
            android:id="@+id/tv_project_name_version_fragment"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textview0"
            android:layout_toRightOf="@+id/textview0"
            android:text="@string/system_name" />

        <TextView
            android:id="@+id/textview1"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview0"
            android:layout_marginLeft="40dp"
            android:text="APP名称："
            android:textColor="@color/green1" />

        <TextView
            android:id="@+id/tv_app_name_version_fragment"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textview1"
            android:layout_toRightOf="@+id/textview1"
            android:text="@string/system_name" />

        <TextView
            android:id="@+id/textview2"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview1"
            android:layout_marginLeft="40dp"
            android:text="当前版本："
            android:textColor="@color/green1" />

        <TextView
            android:id="@+id/tv_version_version_fragment"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textview2"
            android:layout_toRightOf="@+id/textview2"
            android:text="1.0" />

        <TextView
            android:id="@+id/textview3"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview2"
            android:layout_marginLeft="40dp"
            android:text="版权所有："
            android:textColor="@color/green1" />

        <TextView
            android:id="@+id/tv_copyright_version_fragment"
            style="@style/VersionTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textview3"
            android:layout_toRightOf="@+id/textview3"
            android:text="@string/company" />

        <com.dd.CircularProgressButton
            android:id="@+id/bt_update_version_fragment"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textview3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textColor="@color/cpb_white"
            android:textSize="15sp"
            app:cpb_cornerRadius="50dp"
            app:cpb_textIdle="@string/check_update" />
    </RelativeLayout>

</LinearLayout>
